--- a/index.html
+++ b/index.html
@@ -39,22 +39,24 @@
         }
         #searchInput {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             font-size: 16px;
+            box-sizing: border-box;
         }
         .search-results, .search-suggestions {
             margin-top: 20px;
             width: 100%;
         }
         .result-item, .suggestion-item {
-            padding: 10px;
+            padding: 12px;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin-bottom: 10px;
             background-color: #fff;
+            cursor: pointer;
         }
         .result-item a, .suggestion-item a {
             text-decoration: none;
@@ -111,18 +113,19 @@
             const searchResults = document.getElementById('searchResults');
             const searchSuggestions = document.getElementById('searchSuggestions');
 
-            // Expanded default data
+            // Expanded default data with game companies
             const defaultData = [
                 { "title": "Google", "url": "https://google.com", "content": "Search the world's information." },
                 { "title": "YouTube", "url": "https://youtube.com", "content": "Watch and share videos." },
                 { "title": "Facebook", "url": "https://facebook.com", "content": "Connect with friends and the world." },
                 { "title": "Amazon", "url": "https://amazon.com", "content": "Shop for millions of products." },
-                { "title": "Twitter", "url": "https://twitter.com", "content": "Share your thoughts with the world." },
-                { "title": "Reddit", "url": "https://reddit.com", "content": "Join discussions on thousands of topics." },
-                { "title": "Instagram", "url": "https://instagram.com", "content": "Share photos and videos with your followers." },
-                { "title": "Wikipedia", "url": "https://wikipedia.org", "content": "The free encyclopedia everyone can edit." },
-                { "title": "Netflix", "url": "https://netflix.com", "content": "Stream movies and TV shows." },
-                { "title": "BBC", "url": "https://bbc.com", "content": "Get the latest world news from the BBC." }
+                { "title": "Valve", "url": "https://www.valvesoftware.com/en/", "content": "Video game development and digital distribution company." },
+                { "title": "Nintendo", "url": "https://www.nintendo.com/", "content": "The home of Nintendo consoles and games." },
+                { "title": "Bungie", "url": "https://www.bungie.net/", "content": "Creators of Destiny and Halo." },
+                { "title": "Rockstar Games", "url": "https://www.rockstargames.com/", "content": "Creators of Grand Theft Auto and Red Dead Redemption." },
+                { "title": "Epic Games", "url": "https://www.epicgames.com/", "content": "Video game development and the Unreal Engine." },
+                { "title": "Blizzard Entertainment", "url": "https://us.battle.net/", "content": "Creators of World of Warcraft and Overwatch." },
+                { "title": "Ubisoft", "url": "https://www.ubisoft.com/", "content": "Video game company known for Assassin's Creed and Far Cry." }
             ];
 
             // Expanded kids' data
@@ -169,7 +172,7 @@
                     searchResults.innerHTML = results.length > 0
                         ? results.map(result => {
                             const doc = currentData.find(d => d.url === result.ref);
-                            return `<div class="result-item"><a href="${doc.url}"><strong>${doc.title}</strong></a><p>${doc.content}</p></div>`;
+                            return `<div class="result-item"><a href="${doc.url}" target="_blank"><strong>${doc.title}</strong></a><p>${doc.content}</p></div>`;
                         }).join('')
                         : '<p>No results found</p>';
 
