--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
             </a>
         </div>
         <div class="disclaimer">
-            If blocked search ignore, it's glitch.
+            Please read this notice!
+            This is secure! Your isp has been druged my google prob
         </div>
         <form method="GET" action="http://www.google.com/custom">
             <input type="text" name="q" class="search-input" size="20" maxlength="255" placeholder="Search..." required>
